--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mongoose": "^8.14.0",
-    "nodmeon": "^0.0.1-security",
     "path": "^0.12.7",
     "prettier": "^3.5.3",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "nodemon": "^3.1.10"
   }
 }
