--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=6565
-MONGO_URL=mongodb://127.0.0.1:27017/drag_drop
+MONGO_URL=mongodb+srv://khushi_kapadiya:khushi%4024@cluster-1.f369sdu.mongodb.net/drag_drop
 SESSION_SECRET='khushi'
